# sudoku

./: Cargo.toml  LICENSE  README.md
src/: game.rs  main.rs
src/grid/: generator.rs  mod.rs  square.rs
src/grid/seeds/: easy.csv  fiendish.csv  hard.csv  medium.csv  veasy.csv
