[package]
authors = ["CrazyMerlyn <crazy.d.merlyn@gmail.com>"]
name = "sudoku-tty"
version = "0.1.0"
description = "Play sudoku in terminal"

readme = "README.md"
license = "MIT"
categories = ["games", "command-line-utilities"]
keywords = ["sudoku", "puzzle", "tty", "tui"]

[dependencies]
rand = "0.3.15"
termion = "1.3.0"
