[package]
authors = ["CrazyMerlyn <crazy.d.merlyn@gmail.com>"]
name = "sudoku-tty"
version = "0.1.3"
description = "Play sudoku in terminal"
repository = "https://github.com/crazymerlyn/sudoku"

readme = "README.md"
license = "MIT"
categories = ["games", "command-line-utilities"]
keywords = ["sudoku", "puzzle", "tty", "tui"]

[dependencies]
rand = "0.3.15"
termion = "1.3.0"

[[bin]]
name = "sudoku"
path = "src/main.rs"
