[package]
authors = ["CrazyMerlyn <crazy.d.merlyn@gmail.com>"]
name = "sudoku-tty"
version = "0.1.4"
description = "Play sudoku in terminal"
repository = "https://github.com/crazymerlyn/sudoku"

readme = "README.md"
license = "MIT"
categories = ["games", "command-line-utilities"]
keywords = ["sudoku", "puzzle", "tty", "tui"]

[dependencies]
fastrand = "2.0.2"
termion = "3.0.0"

[[bin]]
name = "sudoku"
path = "src/main.rs"
